[package]
name = "stress-test-api-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = {version = "0.11.18", features = ["blocking", "json"] }
tokio = { version = "1.29.1", features = ["full"] }
